--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,6 +12,7 @@
 
 body {
   background-color: #f4f1f1;
+  color: #333;
   font-family: "Poppins", sans-serif;
   font-size: 22px;
   font-weight: 300;
