--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,10 @@
   padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
   background-color: #f4f1f1;
   color: #333;
@@ -89,11 +93,6 @@ p {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   -webkit-border-radius: 50%;
-  /* transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1); */
 }
 
 .action-button {
@@ -107,11 +106,11 @@ p {
 
 .action-button--open,
 .action-button--open:hover {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
 }
 
 .action-button--open + .action-button-items {
@@ -126,11 +125,6 @@ p {
   opacity: 0;
   list-style-type: none;
   position: relative;
-  /* add to ".action-button--open .action-button-items" selector */
-  /* 
-    opacity: 1;
-    bottom: 3rem;
-    right: -0.7rem; */
 }
 
 .action-button-item {
@@ -196,12 +190,16 @@ header {
 
 .hero-image {
   flex: 1;
+  animation: appear 0.5s ease;
+  -webkit-animation: appear 0.5s ease;
 }
 
 .hero-text-box .subtitle {
   font-weight: 700;
   font-size: 70%;
   color: #919090;
+  animation: slideFromLeft 0.5s ease-out 0.5s;
+  -webkit-animation: slideFromLeft 0.5s ease-out 0.5s;
 }
 
 .hero-text {
@@ -209,6 +207,8 @@ header {
   font-size: 310%;
   margin-top: 12px;
   margin-bottom: 24px;
+  animation: slideFromLeft 0.5s ease-out 0.5s;
+  -webkit-animation: slideFromLeft 0.5s ease-out 0.5s;
 }
 
 .hero-button {
@@ -395,3 +395,5 @@ footer .copyright {
   font-size: 70%;
   color: #919090;
 }
+
+/* ++++++++++++++++ ANIMATIONS ++++++++++++++++++++*/
