--- a/resources/css/animations.css
+++ b/resources/css/animations.css
@@ -1,21 +1,21 @@
 .js--scrolled.slide-from-left {
-    animation: slideFromLeft 1s ease-in-out both;
-    -webkit-animation: slideFromLeft 1s ease-in-out both;
+  animation: slideFromLeft 1s ease-in-out both;
+  -webkit-animation: slideFromLeft 1s ease-in-out both;
 }
 
 .js--scrolled.slide-from-right {
-    animation: slideFromRight 1s ease-in-out both;
-    -webkit-animation: slideFromRight 1s ease-in-out both;
+  animation: slideFromRight 1s ease-in-out both;
+  -webkit-animation: slideFromRight 1s ease-in-out both;
 }
 
 .js--scrolled.appear {
-    animation: appear 1s ease-in-out both;
-    -webkit-animation: appear 1s ease-in-out both;
+  animation: appear 1s ease-in-out both;
+  -webkit-animation: appear 1s ease-in-out both;
 }
 
 .js--scrolled.wipe-enter {
-    animation: wipe-enter 1s ease-in-out both;
-    -webkit-animation: wipe-enter 1s ease-in-out both;
+  animation: wipe-enter 1s ease-in-out both;
+  -webkit-animation: wipe-enter 1s ease-in-out both;
 }
 
 @keyframes appear {
@@ -73,21 +73,22 @@
 }
 
 @keyframes wipe-enter {
-  from {
+  0% {
     transform: scale(0, 0.025);
-    opacity: 0;
     -webkit-transform: scale(0, 0.025);
     -moz-transform: scale(0, 0.025);
     -ms-transform: scale(0, 0.025);
     -o-transform: scale(0, 0.025);
   }
-  to {
-    transform: scale(1 0.025);
+  50% {
+    transform: scale(1, 0.025);
+    -webkit-transform: scale(1, 0.025);
+    -moz-transform: scale(1, 0.025);
+    -ms-transform: scale(1, 0.025);
+    -o-transform: scale(1, 0.025);
+  }
+  100% {
     opacity: 1;
-    -webkit-transform: scale(1 0.025);
-    -moz-transform: scale(1 0.025);
-    -ms-transform: scale(1 0.025);
-    -o-transform: scale(1 0.025);
   }
 }
 
