--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,16 +22,32 @@ body {
 }
 
 /* ++++++++++++++++ REUSABLE ++++++++++++++++++++*/
+a.button {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  text-align: center;
+  font-size: 70%;
+}
+
 button {
+  font: inherit;
+}
+
+a.button, button {
   border-radius: 14px;
   border: none;
   background-color: #4381c1;
   color: #fff;
   padding: 1em;
   cursor: pointer;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
 }
 
-button:hover {
+a.button:hover, button:hover {
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
@@ -80,10 +96,11 @@ p {
 
 .action-button,
 .action-button:hover,
-.action-button-item button,
-.action-button-item button:hover {
+.action-button-item .button,
+.action-button-item .button:hover {
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
+  font-size: inherit;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -127,7 +144,7 @@ p {
   margin-bottom: 1rem;
 }
 
-.action-button-item button {
+.action-button-item .button {
   background-color: #699acd;
   width: 3.5rem;
   height: 3.5rem;
@@ -207,7 +224,7 @@ header {
   -webkit-animation: slideFromLeft 0.5s ease-out 0.5s;
 }
 
-.hero-button {
+.button.hero-button {
   width: 80%;
   font-size: 120%;
   margin-top: 24px;
