--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -301,13 +301,32 @@ header {
   font-size: 1.1em;
   color: #bdadea;
   cursor: pointer;
-  border-bottom: 0px;
+  display: inline-block;
   text-decoration: none;
 }
 
-.about-link:hover {
-  font-size: 1.1em;
-  border-bottom: 1px solid #bdadea;
+.about-link::after {
+  content: '';
+  display: block;
+  border-bottom: 2px solid #bdadea;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  -o-transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  -webkit-transition: transform 0.5s ease-in-out;
+  -moz-transition: transform 0.5s ease-in-out;
+  -ms-transition: transform 0.5s ease-in-out;
+  -o-transition: transform 0.5s ease-in-out;
+}
+
+.about-link:hover::after {
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  -o-transform: scaleX(1);
 }
 
 .about-info span i {
