--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -240,6 +240,16 @@ header {
   flex: 1;
   animation: appear 0.5s ease;
   -webkit-animation: appear 0.5s ease;
+  display: flex;
+  align-items: center;
+}
+
+.hero-image img {
+  width: 80%;
+  height: auto;
+  display: inline-block;
+  margin: 0 auto;
+  filter: drop-shadow(3px 7px 4px rgba(0, 0, 0, 0.25));
 }
 
 .hero-text-box .subtitle {
@@ -263,11 +273,6 @@ header {
   width: 80%;
   font-size: 120%;
   margin-top: 24px;
-}
-
-.hero-image img {
-  width: 100%;
-  filter: drop-shadow(3px 7px 4px rgba(0, 0, 0, 0.25));
 }
 
 /* ++++++++++++++++ ABOUT ++++++++++++++++++++*/
