--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -96,6 +96,10 @@
         margin-bottom: 24px;
       }
 
+    .about-section {
+        padding: 24px 55px;
+    }
+
     .about-info {
         margin: 24px 0;
         flex-direction: column;
@@ -165,5 +169,9 @@
         font-size: 16px;
         padding-top: 18px;
         padding-bottom: 8px;
+    }
+
+    .about-section {
+        padding: 24px 40px;
     }
 }
