--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,7 +34,8 @@ button {
   font: inherit;
 }
 
-a.button, button {
+a.button,
+button {
   border-radius: 14px;
   border: none;
   background-color: #4381c1;
@@ -50,7 +51,8 @@ a.button, button {
   -o-border-radius: 14px;
 }
 
-a.button:hover, button:hover {
+a.button:hover,
+button:hover {
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
@@ -130,11 +132,11 @@ p {
 
 .action-button--open,
 .action-button--open:hover {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 .action-button--open + .action-button-items {
@@ -311,7 +313,7 @@ header {
 }
 
 .about-link::after {
-  content: '';
+  content: "";
   display: block;
   border-bottom: 2px solid #bdadea;
   transform: scaleX(0);
